# apkleaks

./: .gitignore  .pylintrc  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  VERSION  apkleaks.py  pyproject.toml  requirements.txt  setup.py  tea.yaml
.github/: FUNDING.yml  SECURITY.md
.github/workflows/: codeql.yaml  publish.yaml
apkleaks/: __init__.py  apkleaks.py  cli.py  colors.py  utils.py
config/: notkeyhacks.json  regexes.json
