[project]
name = "apkleaks"
description = "Scanning APK file for URIs, endpoints & secrets."
readme = "README.md"
authors = [{ name = "dwisiswant0", email = "me@dw1.io" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Topic :: Security",
    "Topic :: Utilities",
]
license = { text = "Apache License 2.0" }
requires-python = ">=3.8"
dynamic = ["dependencies", "version"]

[project.scripts]
apkleaks = "apkleaks.cli:main"

[project.urls]
Homepage = "https://github.com/dwisiswant0/apkleaks/"

[tool.setuptools.dynamic]
version = { file = "VERSION" }
dependencies = { file = "requirements.txt" }

[tool.setuptools.package-data]
"*" = ["*.json"]

[tool.setuptools.packages.find]
include = ["apkleaks*", "config*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
